@@ -149,6 +149,36 @@ MA 02110-1301, USA.
 	return hash;
 }
 
+
+- (NSString *)stringByTrimmingLeadingCharactersInSet:(NSCharacterSet *)characterSet
+{
+	NSRange rangeOfFirstWantedCharacter = [self rangeOfCharacterFromSet:[characterSet invertedSet]];
+	if (rangeOfFirstWantedCharacter.location == NSNotFound)  return @"";
+	
+	return [self substringFromIndex:rangeOfFirstWantedCharacter.location];
+}
+
+
+- (NSString *)stringByTrimmingLeadingWhitespaceAndNewlineCharacters
+{
+	return [self stringByTrimmingLeadingCharactersInSet:[NSCharacterSet whitespaceAndNewlineCharacterSet]];
+}
+
+
+- (NSString *)stringByTrimmingTrailingCharactersInSet:(NSCharacterSet *)characterSet
+{
+	NSRange rangeOfLastWantedCharacter = [self rangeOfCharacterFromSet:[characterSet invertedSet] options:NSBackwardsSearch];
+	if (rangeOfLastWantedCharacter.location == NSNotFound)  return @"";
+	
+	return [self substringToIndex:rangeOfLastWantedCharacter.location+1]; // non-inclusive
+}
+
+
+- (NSString *)stringByTrimmingTrailingWhitespaceAndNewlineCharacters
+{
+	return [self stringByTrimmingTrailingCharactersInSet:[NSCharacterSet whitespaceAndNewlineCharacterSet]];
+}
+
 @end
 
 
